fix jupyter notebooks

--- a/example/Demo_Binary_Collection.ipynb
+++ b/example/Demo_Binary_Collection.ipynb
@@ -44,7 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = Database('postgres://postgres:1Password!@localhost:5432/practice')"
+    "db = Database('postgres://postgres:1Password!@localhost:5432/practice')\n",
+    "destroy_everything_in(db)"
    ]
   },
   {
