--- a/example/Demo_Database_Query.ipynb
+++ b/example/Demo_Database_Query.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Query ('a', '==', 'apple')>\n",
+      "('a', '==', 'apple')\n"
+     ]
+    }
+   ],
    "source": [
     "# a = Q('a').equals('apple')\n",
     "a = Q('a') == 'apple'\n",
@@ -38,9 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Query ('b', '!=', 'bee')>\n",
+      "('b', '!=', 'bee')\n"
+     ]
+    }
+   ],
    "source": [
     "# a = Q('b').not_equals('bee')\n",
     "b = Q('b') != 'bee'\n",
@@ -50,9 +68,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "<AndQuery [<Query ('a', '==', 'apple')>, <Query ('b', '!=', 'bee')>]>\n",
+      "<Query ('a', '==', 'apple')>\n",
+      "<Query ('b', '!=', 'bee')>\n"
+     ]
+    }
+   ],
    "source": [
     "# z = a.and_(b)\n",
     "# z = Q('a').equals('apple').and_(Q('b').not_equals('bee'))\n",
@@ -66,9 +95,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "<OrQuery [<Query ('a', '==', 'apple')>, <Query ('b', '!=', 'bee')>]>\n",
+      "<Query ('a', '==', 'apple')>\n",
+      "<Query ('b', '!=', 'bee')>\n"
+     ]
+    }
+   ],
    "source": [
     "# y = a.or_(b)\n",
     "# y = Q('a').equals('apple').or_(Q('b').not_equals('bee'))\n",
@@ -82,9 +122,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Query ('c', '>=', 5)>\n",
+      "('c', '>=', 5)\n"
+     ]
+    }
+   ],
    "source": [
     "# c = Q('c').greater_than_or_equal_to(5)\n",
     "c = Q('c') >= 5\n",
@@ -94,9 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Query ('d', '<', 5)>\n",
+      "('d', '<', 5)\n"
+     ]
+    }
+   ],
    "source": [
     "# d = Q('d').less_than(5)\n",
     "d = Q('d') < 5\n",
@@ -106,9 +164,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<OrQuery [<Query ('a', '==', 'apple')>, <Query ('b', '!=', 'bee')>]>\n",
+      "<OrQuery [<Query ('c', '>=', 5)>, <Query ('d', '<', 5)>]>\n"
+     ]
+    }
+   ],
    "source": [
     "# (a.or_(b)).and_((c.or_(d)))\n",
     "for query in ((a | b) & ( c | d)):\n",
@@ -117,9 +184,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<AndQuery [<Query ('a', '==', 'apple')>, <Query ('b', '!=', 'bee')>]>\n",
+      "<AndQuery [<Query ('c', '>=', 5)>, <Query ('d', '<', 5)>]>\n"
+     ]
+    }
+   ],
    "source": [
     "# (a.and_(b)).or_(c.and_(d))\n",
     "for query in ((a & b) | (c & d)):\n",
@@ -128,9 +204,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<AndQuery [<Query ('a', '==', 'apple')>, <Query ('b', '!=', 'bee')>, <Query ('c', '>=', 5)>]>\n",
+      "<Query ('a', '==', 'apple')>\n",
+      "<Query ('b', '!=', 'bee')>\n",
+      "<Query ('c', '>=', 5)>\n"
+     ]
+    }
+   ],
    "source": [
     "x = ((a & b) & c)\n",
     "print(x)\n",
@@ -140,9 +227,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<OrQuery [<Query ('a', '==', 'apple')>, <Query ('b', '!=', 'bee')>, <Query ('c', '>=', 5)>]>\n",
+      "<Query ('a', '==', 'apple')>\n",
+      "<Query ('b', '!=', 'bee')>\n",
+      "<Query ('c', '>=', 5)>\n"
+     ]
+    }
+   ],
    "source": [
     "w = (a | b) | c\n",
     "print(w)\n",
@@ -152,9 +250,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Query ('e', 'match', 'ele[a-z]$')>\n",
+      "('e', 'match', 'ele[a-z]$')\n"
+     ]
+    }
+   ],
    "source": [
     "e = Q('e').match(r'ele[a-z]$')\n",
     "print(e)\n",
@@ -163,9 +270,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Query ('f', 'contains', 'fish')>\n",
+      "('f', 'contains', 'fish')\n"
+     ]
+    }
+   ],
    "source": [
     "f = Q('f').contains('fish')\n",
     "print(f)\n",
@@ -174,9 +290,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Query ('g', 'exists', True)>\n",
+      "('g', 'exists', True)\n"
+     ]
+    }
+   ],
    "source": [
     "# g = Q('g').exists()\n",
     "g = +Q('g')\n",
@@ -186,9 +311,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Query ('h', 'exists', False)>\n",
+      "('h', 'exists', False)\n"
+     ]
+    }
+   ],
    "source": [
     "# h = Q('h').exists(False)\n",
     "h = -Q('h')\n",
@@ -198,9 +332,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Query ('i', 'in', [1, 2, 3, 4])>\n",
+      "('i', 'in', [1, 2, 3, 4])\n"
+     ]
+    }
+   ],
    "source": [
     "# i = Q('i').in_([1, 2, 3, 4])\n",
     "i = Q('i') >> [1, 2, 3, 4]\n",
@@ -210,9 +353,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "QueryUnresolvedError",
+     "evalue": "The query field 'j' has not been resolved yet",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mQueryUnresolvedError\u001b[0m                      Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-0975b113708e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Intentional Error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mQ\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'j'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/projects/ndi/ndi-python/ndi/query.py\u001b[0m in \u001b[0;36m__repr__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__repr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0;34mf'<Query {self()}>'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m     \u001b[0;31m# Methods for combining ndi_queries\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/projects/ndi/ndi-python/ndi/query.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__repr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/projects/ndi/ndi-python/ndi/query.py\u001b[0m in \u001b[0;36mquery\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     48\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__query\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m             raise QueryUnresolvedError(\n\u001b[0m\u001b[1;32m     51\u001b[0m                 f'The query field \\'{self.field}\\' has not been resolved yet')\n\u001b[1;32m     52\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mQueryUnresolvedError\u001b[0m: The query field 'j' has not been resolved yet"
+     ]
+    }
+   ],
    "source": [
     "# Intentional Error\n",
     "j = Q('j')\n",
