--- a/example/Demo_Document_Dependencies_SQL.ipynb
+++ b/example/Demo_Document_Dependencies_SQL.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "from ndi import Document\n",
     "from ndi.database.sql import SQL as Database\n",
-    "from ndi.database.query import Query as Q, AndQuery, OrQuery\n",
+    "from ndi import Query as Q\n",
     "from ndi.database.utils import print_everything_in, destroy_everything_in\n",
     "from sqlalchemy import and_, or_"
    ]
@@ -33,7 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = Database('postgres://postgres:1Password!@localhost:5432/practice')"
+    "db = Database('postgres://postgres:1Password!@localhost:5432/practice')\n",
+    "destroy_everything_in(db)"
    ]
   },
   {
@@ -55,15 +56,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': '7f72a5770e984725aa1e51342667ed79'}, 'hello': 'world'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "force = Document({ 'F' : 'ma'}, 'force', 'equation', '1234')\n",
     "doc.add_dependency(force)\n"
@@ -73,15 +66,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'_metadata': {'name': 'force', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'gas': 'eccbd5ef42db4406b2714c371b1433c8'}, 'F': 'ma'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gas = Document({ 'PV': 'nRT' }, 'gas', 'equation', '1234')\n",
     "force.add_dependency(gas)"
@@ -100,7 +85,7 @@
     {
      "data": {
       "text/plain": [
-       "'133a184a6a524811a8fee7b5aff9cbd9'"
+       "'11928f465e204e16b775657b77383fc9'"
       ]
      },
      "execution_count": 7,
@@ -127,7 +112,8 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': '7f72a5770e984725aa1e51342667ed79'},\n",
+       " '_dependencies': {'force': 'b91336f5f45c435c830f6dde9abad4bf'},\n",
+       " '_depends_on': [],\n",
        " 'hello': 'world'}"
       ]
      },
@@ -164,7 +150,8 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': '7f72a5770e984725aa1e51342667ed79'},\n",
+       " '_dependencies': {'force': 'b91336f5f45c435c830f6dde9abad4bf'},\n",
+       " '_depends_on': [],\n",
        " 'hello': 'world'}"
       ]
      },
@@ -185,7 +172,7 @@
     {
      "data": {
       "text/plain": [
-       "{'force': <ndi.document.Document at 0x117b8af40>}"
+       "{'force': <ndi.document.Document at 0x118248340>}"
       ]
      },
      "execution_count": 11,
@@ -212,7 +199,8 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'force': <ndi.document.Document at 0x117b8af40>},\n",
+       " '_dependencies': {'force': <ndi.document.Document at 0x118248340>},\n",
+       " '_depends_on': [],\n",
        " 'hello': 'world'}"
       ]
      },
@@ -240,7 +228,8 @@
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
-       " '_dependencies': {'gas': 'eccbd5ef42db4406b2714c371b1433c8'},\n",
+       " '_dependencies': {'gas': 'a8968ebf42ab447a805986d0bf34567d'},\n",
+       " '_depends_on': ['11928f465e204e16b775657b77383fc9'],\n",
        " 'F': 'ma'}"
       ]
      },
@@ -261,7 +250,7 @@
     {
      "data": {
       "text/plain": [
-       "{'gas': <ndi.document.Document at 0x117bb3b80>}"
+       "{'gas': <ndi.document.Document at 0x1182488b0>}"
       ]
      },
      "execution_count": 14,
@@ -289,6 +278,7 @@
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
+       " '_depends_on': ['b91336f5f45c435c830f6dde9abad4bf'],\n",
        " 'PV': 'nRT'}"
       ]
      },
@@ -309,12 +299,12 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x117bd9ac0>,\n",
-       " <ndi.document.Document at 0x117bd9c70>,\n",
-       " <ndi.document.Document at 0x117bd99a0>,\n",
-       " <ndi.document.Document at 0x117bd9bb0>,\n",
-       " <ndi.document.Document at 0x117bd9b50>,\n",
-       " <ndi.document.Document at 0x117bd9dc0>]"
+       "[<ndi.document.Document at 0x11819bbe0>,\n",
+       " <ndi.document.Document at 0x1181d0790>,\n",
+       " <ndi.document.Document at 0x1181d0580>,\n",
+       " <ndi.document.Document at 0x1181d02b0>,\n",
+       " <ndi.document.Document at 0x11826a9a0>,\n",
+       " <ndi.document.Document at 0x11826adc0>]"
       ]
      },
      "execution_count": 16,
@@ -344,11 +334,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': '47b56e817866442d9059241adf993db0'}, 'hello': 'world'}\n",
-      "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, 'PV': 'nRT'}\n",
-      "{'_metadata': {'name': 'force', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'gas': '5e7abeca034c4154a4f6e5c9428fe98e'}, 'F': 'ma'}\n",
-      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': '7f72a5770e984725aa1e51342667ed79'}, 'hello': 'world'}\n",
-      "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, 'PV': 'nRT'}\n"
+      "{'_metadata': {'name': 'myDaq1', 'type': 'ndi_daq_system', 'experiment_id': '142b9454c51c41cb98bd2ef3a358dcd0', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'epoch_ids': [], 'epoch_probe_map_class': 'MockEpochProbeMap', 'daq_reader_class': 'MockReader'}\n",
+      "{'_metadata': {'name': '', 'type': 'ndi_file_navigator', 'experiment_id': '', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'epoch_file_patterns': ['.*\\\\.wav', '.*\\\\.txt'], 'metadata_file_pattern': '.*\\\\.txt'}\n",
+      "{'_metadata': {'name': 'myDaq2', 'type': 'ndi_daq_system', 'experiment_id': '142b9454c51c41cb98bd2ef3a358dcd0', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'epoch_ids': [], 'epoch_probe_map_class': 'MockEpochProbeMap', 'daq_reader_class': 'MockReader'}\n",
+      "{'_metadata': {'name': 'og', 'type': 'test_doc', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {'force': 'b91336f5f45c435c830f6dde9abad4bf'}, '_depends_on': [], 'hello': 'world'}\n",
+      "{'_metadata': {'name': 'gas', 'type': 'equation', 'experiment_id': '1234', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': ['b91336f5f45c435c830f6dde9abad4bf'], 'PV': 'nRT'}\n"
      ]
     }
    ],
@@ -362,9 +352,7 @@
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "destroy_everything_in(db)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
