--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -79,7 +79,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['99b18ab82e9d47d1a80868a538c7a9f5', '925de0c74a5d49eb8cd01a36c8203e20', '224f97e8be87454390f31b0e4c956193']\n"
+      "['527985916f85408c8c0e2830c22e4df3', '47d80b3dae0c4b1aa762fcf440ea3bae', 'b5913eafd1924d67b6409403d4280f23']\n"
      ]
     }
    ],
@@ -127,9 +127,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x129077640>,\n",
-       " <ndi.core.Probe at 0x129077280>,\n",
-       " <ndi.core.Probe at 0x129077250>]"
+       "[<ndi.core.Probe at 0x127de9730>,\n",
+       " <ndi.core.Probe at 0x127de9340>,\n",
+       " <ndi.core.Probe at 0x127de9e20>]"
       ]
      },
      "execution_count": 9,
@@ -171,9 +171,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x128fbc5e0>,\n",
-       " <ndi.document.Document at 0x115e1e370>,\n",
-       " <ndi.document.Document at 0x128feea30>]"
+       "[<ndi.document.Document at 0x11ac563d0>,\n",
+       " <ndi.document.Document at 0x127de1490>,\n",
+       " <ndi.document.Document at 0x127de18b0>]"
       ]
      },
      "execution_count": 11,
@@ -194,23 +194,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DAQ reader None not set to <ndi.core.Channel object at 0x128fbc7c0>. If necessary, connect this experiment to the appropriate DAQ system.\n",
-      "DAQ reader None not set to <ndi.core.Channel object at 0x12904b310>. If necessary, connect this experiment to the appropriate DAQ system.\n",
-      "DAQ reader None not set to <ndi.core.Channel object at 0x12904bd60>. If necessary, connect this experiment to the appropriate DAQ system.\n",
-      "DAQ reader None not set to <ndi.core.Channel object at 0x129064f10>. If necessary, connect this experiment to the appropriate DAQ system.\n",
-      "DAQ reader None not set to <ndi.core.Channel object at 0x129064c40>. If necessary, connect this experiment to the appropriate DAQ system.\n",
-      "DAQ reader None not set to <ndi.core.Channel object at 0x1290646a0>. If necessary, connect this experiment to the appropriate DAQ system.\n"
+      "No DAQ reader set to <ndi.core.Channel object at 0x127db52b0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x127d62820>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x127d62df0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x127de9220>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x127df1eb0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x127df1640>.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x128fbc7c0>,\n",
-       " <ndi.core.Channel at 0x12904b310>,\n",
-       " <ndi.core.Channel at 0x12904bd60>,\n",
-       " <ndi.core.Channel at 0x129064f10>,\n",
-       " <ndi.core.Channel at 0x129064c40>,\n",
-       " <ndi.core.Channel at 0x1290646a0>]"
+       "[<ndi.core.Channel at 0x127db52b0>,\n",
+       " <ndi.core.Channel at 0x127d62820>,\n",
+       " <ndi.core.Channel at 0x127d62df0>,\n",
+       " <ndi.core.Channel at 0x127de9220>,\n",
+       " <ndi.core.Channel at 0x127df1eb0>,\n",
+       " <ndi.core.Channel at 0x127df1640>]"
       ]
      },
      "execution_count": 12,
@@ -244,7 +244,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x12908e370>, <ndi.core.Epoch at 0x12908eb50>]"
+       "[<ndi.core.Epoch at 0x127d305b0>, <ndi.core.Epoch at 0x127de9ca0>]"
       ]
      },
      "execution_count": 14,
@@ -304,13 +304,13 @@
       "text/plain": [
        "{'_metadata': {'name': 'doc',\n",
        "  'type': 'independent',\n",
-       "  'experiment_id': '3a719445f60a407e9631d951564d7ffc',\n",
+       "  'experiment_id': 'b78c1d8499b54c34b53f3930420b0875',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': ['3a719445f60a407e9631d951564d7ffc'],\n",
+       " '_depends_on': ['b78c1d8499b54c34b53f3930420b0875'],\n",
        " 'hello': 'world'}"
       ]
      },
@@ -331,7 +331,7 @@
     {
      "data": {
       "text/plain": [
-       "{'doc': <ndi.document.Document at 0x129085c10>}"
+       "{'doc': <ndi.document.Document at 0x127e0a160>}"
       ]
      },
      "execution_count": 17,
@@ -352,7 +352,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "38349832ac9f4fc486230fa68f7a0c3d\n"
+      "e9bb8d9ad23a49eebb24c8a83b0b2825\n"
      ]
     }
    ],
@@ -458,7 +458,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '3a719445f60a407e9631d951564d7ffc',\n",
+       "  'experiment_id': 'b78c1d8499b54c34b53f3930420b0875',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -490,7 +490,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '2d064b1caeae4e08b60cb4bce819d5e2',\n",
+       "  'experiment_id': 'e6566ecfe0b242debe134dffe93091f4',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
