--- a/example/Demo_Database_FileSystem.ipynb
+++ b/example/Demo_Database_FileSystem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,28 +16,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from ndi import Experiment, DaqSystem, FileNavigator\n",
     "from ndi.daqreaders import MockReader\n",
     "from ndi.database import FileSystem as Database\n",
-    "from ndi import Query as Q"
+    "from ndi import Query as Q\n",
+    "from ndi.database.utils import print_everything_in, destroy_everything_in"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = Database('../test_exp')"
+    "db = Database('../test_exp')\n",
+    "destroy_everything_in(db)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,228 +49,335 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "class MockEpochProbeMap: pass\n",
     "ds = DaqSystem(name='myDaq1',\n",
     "              file_navigator=fn,\n",
-    "              daq_reader=MockReader)\n",
+    "              daq_reader=MockReader,\n",
+    "              epoch_probe_map_class=MockEpochProbeMap)\n",
     "ds2 = DaqSystem(name='myDaq2',\n",
     "               file_navigator=fn,\n",
-    "               daq_reader=MockReader)"
+    "               daq_reader=MockReader,\n",
+    "              epoch_probe_map_class=MockEpochProbeMap)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "e = Experiment(name='myExperiment3', \n",
-    "               daq_systems=[ds, ds2])"
+    "e = Experiment(name='myExperiment3').connect(\n",
+    "    database=db,\n",
+    "    daq_systems=[ds, ds2]\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Experiment.connect() has not been run on this experiment (2c6046fd71c14232994d0e89234fb4a4). It will be minimally functional until connected.\n"
+     ]
+    }
+   ],
    "source": [
-    "db.add_experiment(e)"
+    "e2doc = db.find_by_id(e.id)\n",
+    "e2 = Experiment.from_document(e2doc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "e.ctx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "e2 = db.find_by_id(Experiment, e.id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "e2.ctx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "e2 == e"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Experiment.connect() has not been run on this experiment (2c6046fd71c14232994d0e89234fb4a4). It will be minimally functional until connected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "e2 == db.find(Experiment,Q('name') == 'myExperiment3')[0]"
+    "e2 == Experiment.from_document(\n",
+    "    db.find(Q('_metadata.name') == 'myExperiment3')[0]\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "db.find(Experiment, Q('name') == 'myExperiment2')"
+    "db.find(Q('_metadata.name') == 'myExperiment2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_results = db.find(DaqSystem, Q('experiment_id') == e.id)"
+    "is_daq_system = Q('_metadata.type') == DaqSystem.DOCUMENT_TYPE\n",
+    "# has_experiment_id = Q('_metadata.experiment_id') == e.id\n",
+    "ds_results = db.find(is_daq_system)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<ndi.document.Document object at 0x12a0b2100>, <ndi.document.Document object at 0x12a0b22e0>]\n"
+     ]
+    }
+   ],
    "source": [
     "print(ds_results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_metadata': {'name': 'myDaq2', 'type': 'ndi_daq_system', 'experiment_id': '2c6046fd71c14232994d0e89234fb4a4', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'epoch_ids': [], 'epoch_probe_map_class': 'MockEpochProbeMap', 'daq_reader_class': 'MockReader'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "e.daq_systems[0] == ds_results[0]"
+    "print(ds_results[0].data)\n",
+    "e.daq_systems[0] == DaqSystem.from_document(ds_results[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<ndi.document.Document at 0x12a0a7c70>,\n",
+       " <ndi.document.Document at 0x12a0a7070>,\n",
+       " <ndi.document.Document at 0x12a0b2b50>,\n",
+       " <ndi.document.Document at 0x12a0b2880>]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "db.find(Experiment)"
+    "db.find()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.delete_by_id(Experiment, e.id)"
+    "db.delete_by_id(e.id, force=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
-    "    db.find_by_id(Experiment, e.id)\n",
+    "    db.find_by_id(e.id)\n",
     "except FileNotFoundError:\n",
     "    print('File not found')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.delete_many(Experiment)"
+    "db.delete_many(force=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "db.find(Experiment)"
+    "db.find()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
-    "    db.add(ds)\n",
+    "    db.add(ds.document)\n",
     "except FileExistsError as e:\n",
     "    print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.upsert(ds)"
+    "db.upsert(ds.document, force=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "myDaq1\n"
+     ]
+    }
+   ],
    "source": [
-    "print(ds.name)"
+    "print(ds.metadata['name'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.update_by_id(DaqSystem, ds.id, { 'name': 'daq2' })"
+    "db.update_by_id(ds.id, { 'name': 'daq2' })"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds2 = db.find_by_id(DaqSystem, ds.id)"
+    "ds2 = db.find_by_id(ds.id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "myDaq1\n"
+     ]
+    }
+   ],
    "source": [
-    "print(ds2.name)"
+    "print(ds2.metadata['name'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unexpected type <class 'str'>. Expected type <class 'ndi.document.Document'>.\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    db.add('a')\n",
@@ -281,13 +390,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "db.drop_collection(Experiment)\n",
-    "try:\n",
-    "    db.find(Experiment)\n",
-    "except KeyError as e:\n",
-    "    print(e)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
