sketch out Demo_API_Core

--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -63,45 +63,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp = Experiment('test_experiment').connect(\n",
-    "    database=db,\n",
-    "    binary_collection=bc,\n",
-    "    load_existing=False\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['527985916f85408c8c0e2830c22e4df3', '47d80b3dae0c4b1aa762fcf440ea3bae', 'b5913eafd1924d67b6409403d4280f23']\n"
-     ]
-    }
-   ],
-   "source": [
     "fn = FileNavigator(epoch_file_patterns=['.*\\\\.wav', '.*\\\\.txt'], \n",
     "                   metadata_file_pattern='.*\\\\.txt')\n",
     "class MockEpochProbeMap: pass\n",
     "daqs = [\n",
     "    DaqSystem('ds0', fn, MockReader, MockEpochProbeMap),\n",
     "    DaqSystem('ds1', fn, MockReader, MockEpochProbeMap)\n",
-    "]\n",
-    "print([d.id for d in daqs+[fn]])\n",
-    "for ds in daqs:\n",
-    "    exp.add_daq_system(ds)"
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "exp = Experiment('test_experiment').connect(\n",
+    "    directory='./some/path/',\n",
+    "    database=db,\n",
+    "    binary_collection=bc,\n",
+    "    daq_systems=daqs,\n",
+    "    load_existing=False\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
@@ -127,9 +111,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x127de9730>,\n",
-       " <ndi.core.Probe at 0x127de9340>,\n",
-       " <ndi.core.Probe at 0x127de9e20>]"
+       "[<ndi.core.Probe at 0x111845b80>,\n",
+       " <ndi.core.Probe at 0x111845af0>,\n",
+       " <ndi.core.Probe at 0x12abadf10>]"
       ]
      },
      "execution_count": 9,
@@ -171,9 +155,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x11ac563d0>,\n",
-       " <ndi.document.Document at 0x127de1490>,\n",
-       " <ndi.document.Document at 0x127de18b0>]"
+       "[<ndi.document.Document at 0x12abad730>,\n",
+       " <ndi.document.Document at 0x12abad880>,\n",
+       " <ndi.document.Document at 0x12abad550>]"
       ]
      },
      "execution_count": 11,
@@ -194,23 +178,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No DAQ reader set to <ndi.core.Channel object at 0x127db52b0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x127d62820>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x127d62df0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x127de9220>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x127df1eb0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x127df1640>.\n"
+      "No DAQ reader set to <ndi.core.Channel object at 0x12aba6520>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x12ab14310>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x12abdb9d0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x12abdb7c0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x12abdb5e0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x12abdbca0>.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x127db52b0>,\n",
-       " <ndi.core.Channel at 0x127d62820>,\n",
-       " <ndi.core.Channel at 0x127d62df0>,\n",
-       " <ndi.core.Channel at 0x127de9220>,\n",
-       " <ndi.core.Channel at 0x127df1eb0>,\n",
-       " <ndi.core.Channel at 0x127df1640>]"
+       "[<ndi.core.Channel at 0x12aba6520>,\n",
+       " <ndi.core.Channel at 0x12ab14310>,\n",
+       " <ndi.core.Channel at 0x12abdb9d0>,\n",
+       " <ndi.core.Channel at 0x12abdb7c0>,\n",
+       " <ndi.core.Channel at 0x12abdb5e0>,\n",
+       " <ndi.core.Channel at 0x12abdbca0>]"
       ]
      },
      "execution_count": 12,
@@ -244,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x127d305b0>, <ndi.core.Epoch at 0x127de9ca0>]"
+       "[<ndi.core.Epoch at 0x12abce0a0>, <ndi.core.Epoch at 0x12abced30>]"
       ]
      },
      "execution_count": 14,
@@ -255,34 +239,6 @@
    "source": [
     "exp.get_epochs()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -304,13 +260,13 @@
       "text/plain": [
        "{'_metadata': {'name': 'doc',\n",
        "  'type': 'independent',\n",
-       "  'experiment_id': 'b78c1d8499b54c34b53f3930420b0875',\n",
+       "  'experiment_id': '8c03d47c331446d781c20284bc3c4ec7',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': ['b78c1d8499b54c34b53f3930420b0875'],\n",
+       " '_depends_on': ['8c03d47c331446d781c20284bc3c4ec7'],\n",
        " 'hello': 'world'}"
       ]
      },
@@ -331,7 +287,7 @@
     {
      "data": {
       "text/plain": [
-       "{'doc': <ndi.document.Document at 0x127e0a160>}"
+       "{'doc': <ndi.document.Document at 0x12abe8820>}"
       ]
      },
      "execution_count": 17,
@@ -352,7 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "e9bb8d9ad23a49eebb24c8a83b0b2825\n"
+      "3d0b54ef6e14492b93f938afbbfe1401\n"
      ]
     }
    ],
@@ -458,7 +414,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': 'b78c1d8499b54c34b53f3930420b0875',\n",
+       "  'experiment_id': '8c03d47c331446d781c20284bc3c4ec7',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -490,7 +446,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': 'e6566ecfe0b242debe134dffe93091f4',\n",
+       "  'experiment_id': 'f9b1ab78180f4db49fa50e1367d7e250',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
