add delete to ndi_classes

--- a/example/Demo_API_Core.ipynb
+++ b/example/Demo_API_Core.ipynb
@@ -239,7 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp.get_"
+    "exp.get_document_dependencies()"
    ]
   },
   {
@@ -247,7 +247,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "og_doc.delete(force=True, remove_history=True)\n",
+    "exp.get_document_dependencies()"
+   ]
   },
   {
    "cell_type": "code",
