--- a/example/Demo_FS_Document_Versions.ipynb
+++ b/example/Demo_FS_Document_Versions.ipynb
@@ -230,7 +230,7 @@
    "source": [
     "# Should throw warning\n",
     "# try:\n",
-    "#     doc.delete_self()\n",
+    "#     doc.delete()\n",
     "# except RuntimeWarning(e):\n",
     "#     pass"
    ]
@@ -250,7 +250,7 @@
     }
    ],
    "source": [
-    "doc.delete_self(force=True, remove_history=True)"
+    "doc.delete(force=True, remove_history=True)"
    ]
   },
   {
