--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -111,9 +111,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x111845b80>,\n",
-       " <ndi.core.Probe at 0x111845af0>,\n",
-       " <ndi.core.Probe at 0x12abadf10>]"
+       "[<ndi.core.Probe at 0x10f61ffd0>,\n",
+       " <ndi.core.Probe at 0x1034bc3a0>,\n",
+       " <ndi.core.Probe at 0x11c7d9910>]"
       ]
      },
      "execution_count": 9,
@@ -155,9 +155,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x12abad730>,\n",
-       " <ndi.document.Document at 0x12abad880>,\n",
-       " <ndi.document.Document at 0x12abad550>]"
+       "[<ndi.document.Document at 0x11c7634f0>,\n",
+       " <ndi.document.Document at 0x11c763dc0>,\n",
+       " <ndi.document.Document at 0x11c7631f0>]"
       ]
      },
      "execution_count": 11,
@@ -178,23 +178,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No DAQ reader set to <ndi.core.Channel object at 0x12aba6520>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x12ab14310>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x12abdb9d0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x12abdb7c0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x12abdb5e0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x12abdbca0>.\n"
+      "No DAQ reader set to <ndi.core.Channel object at 0x11c7c0730>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11c7d92e0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11c7d93d0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11c7e8f40>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11c727610>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11c727c40>.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x12aba6520>,\n",
-       " <ndi.core.Channel at 0x12ab14310>,\n",
-       " <ndi.core.Channel at 0x12abdb9d0>,\n",
-       " <ndi.core.Channel at 0x12abdb7c0>,\n",
-       " <ndi.core.Channel at 0x12abdb5e0>,\n",
-       " <ndi.core.Channel at 0x12abdbca0>]"
+       "[<ndi.core.Channel at 0x11c7c0730>,\n",
+       " <ndi.core.Channel at 0x11c7d92e0>,\n",
+       " <ndi.core.Channel at 0x11c7d93d0>,\n",
+       " <ndi.core.Channel at 0x11c7e8f40>,\n",
+       " <ndi.core.Channel at 0x11c727610>,\n",
+       " <ndi.core.Channel at 0x11c727c40>]"
       ]
      },
      "execution_count": 12,
@@ -228,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x12abce0a0>, <ndi.core.Epoch at 0x12abced30>]"
+       "[<ndi.core.Epoch at 0x11c7c0a60>, <ndi.core.Epoch at 0x11c7c0640>]"
       ]
      },
      "execution_count": 14,
@@ -260,13 +260,13 @@
       "text/plain": [
        "{'_metadata': {'name': 'doc',\n",
        "  'type': 'independent',\n",
-       "  'experiment_id': '8c03d47c331446d781c20284bc3c4ec7',\n",
+       "  'experiment_id': 'c98c6247dad4403a9dd5d7ad29b0ac96',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': ['8c03d47c331446d781c20284bc3c4ec7'],\n",
+       " '_depends_on': ['c98c6247dad4403a9dd5d7ad29b0ac96'],\n",
        " 'hello': 'world'}"
       ]
      },
@@ -287,7 +287,7 @@
     {
      "data": {
       "text/plain": [
-       "{'doc': <ndi.document.Document at 0x12abe8820>}"
+       "{'doc': <ndi.document.Document at 0x11c7f6670>}"
       ]
      },
      "execution_count": 17,
@@ -308,7 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3d0b54ef6e14492b93f938afbbfe1401\n"
+      "984454e96d3f45919516dc3a665e560e\n"
      ]
     }
    ],
@@ -414,7 +414,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '8c03d47c331446d781c20284bc3c4ec7',\n",
+       "  'experiment_id': 'c98c6247dad4403a9dd5d7ad29b0ac96',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -446,7 +446,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': 'f9b1ab78180f4db49fa50e1367d7e250',\n",
+       "  'experiment_id': '997c2759687e4eacac5400ac645459ae',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
