--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -111,9 +111,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x117e8d670>,\n",
-       " <ndi.core.Probe at 0x124f84d90>,\n",
-       " <ndi.core.Probe at 0x12502c340>]"
+       "[<ndi.core.Probe at 0x102fd3700>,\n",
+       " <ndi.core.Probe at 0x11c3567c0>,\n",
+       " <ndi.core.Probe at 0x11c35b730>]"
       ]
      },
      "execution_count": 9,
@@ -155,9 +155,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x1250116a0>,\n",
-       " <ndi.document.Document at 0x125011520>,\n",
-       " <ndi.document.Document at 0x125011820>]"
+       "[<ndi.document.Document at 0x11c338ee0>,\n",
+       " <ndi.document.Document at 0x11c2d8640>,\n",
+       " <ndi.document.Document at 0x11c2d8460>]"
       ]
      },
      "execution_count": 11,
@@ -178,23 +178,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No DAQ reader set to <ndi.core.Channel object at 0x10bcc3820>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x10bcc32e0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x125011970>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x1250563a0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x125056550>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x125056280>.\n"
+      "No DAQ reader set to <ndi.core.Channel object at 0x11c29b580>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11c2d8f40>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11c35b5b0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11c35bf10>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11c356220>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x11c356580>.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x10bcc3820>,\n",
-       " <ndi.core.Channel at 0x10bcc32e0>,\n",
-       " <ndi.core.Channel at 0x125011970>,\n",
-       " <ndi.core.Channel at 0x1250563a0>,\n",
-       " <ndi.core.Channel at 0x125056550>,\n",
-       " <ndi.core.Channel at 0x125056280>]"
+       "[<ndi.core.Channel at 0x11c29b580>,\n",
+       " <ndi.core.Channel at 0x11c2d8f40>,\n",
+       " <ndi.core.Channel at 0x11c35b5b0>,\n",
+       " <ndi.core.Channel at 0x11c35bf10>,\n",
+       " <ndi.core.Channel at 0x11c356220>,\n",
+       " <ndi.core.Channel at 0x11c356580>]"
       ]
      },
      "execution_count": 12,
@@ -228,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x125011af0>, <ndi.core.Epoch at 0x125011100>]"
+       "[<ndi.core.Epoch at 0x11c356cd0>, <ndi.core.Epoch at 0x11c356310>]"
       ]
      },
      "execution_count": 14,
@@ -260,13 +260,13 @@
       "text/plain": [
        "{'_metadata': {'name': 'doc',\n",
        "  'type': 'independent',\n",
-       "  'experiment_id': '1a145408208842439aec7d2f2e030549',\n",
+       "  'experiment_id': '99dfef04f1e84458945a64c7af926d4d',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': ['1a145408208842439aec7d2f2e030549'],\n",
+       " '_depends_on': ['99dfef04f1e84458945a64c7af926d4d'],\n",
        " 'hello': 'world'}"
       ]
      },
@@ -287,7 +287,7 @@
     {
      "data": {
       "text/plain": [
-       "{'doc': <ndi.document.Document at 0x125064760>}"
+       "{'doc': <ndi.document.Document at 0x11c338f10>}"
       ]
      },
      "execution_count": 17,
@@ -308,7 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d6f45085e1ea4b35b261f2535d8807a2\n"
+      "ff6195965288484892115d6e6454f9fb\n"
      ]
     }
    ],
@@ -414,7 +414,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '1a145408208842439aec7d2f2e030549',\n",
+       "  'experiment_id': '99dfef04f1e84458945a64c7af926d4d',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -446,7 +446,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '4a5ceaa1fc514cd9a29d36cdfe924326',\n",
+       "  'experiment_id': '624b0ac84af54438854a1bce507d51d9',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
