fix notebooks and tests

--- a/example/Demo_Database_FileSystem.ipynb
+++ b/example/Demo_Database_FileSystem.ipynb
@@ -57,11 +57,11 @@
     "ds = DaqSystem(name='myDaq1',\n",
     "              file_navigator=fn,\n",
     "              daq_reader=MockReader,\n",
-    "              epoch_probe_map_class=MockEpochProbeMap)\n",
+    "              epoch_probe_map=MockEpochProbeMap)\n",
     "ds2 = DaqSystem(name='myDaq2',\n",
     "               file_navigator=fn,\n",
     "               daq_reader=MockReader,\n",
-    "              epoch_probe_map_class=MockEpochProbeMap)"
+    "              epoch_probe_map=MockEpochProbeMap)"
    ]
   },
   {
@@ -85,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Experiment.connect() has not been run on this experiment (2c6046fd71c14232994d0e89234fb4a4). It will be minimally functional until connected.\n"
+      "Warning: Experiment.connect() has not been run on this experiment (9cd7a6f2af5347f3aa1da88a969f8de1). It will be minimally functional until connected.\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Experiment.connect() has not been run on this experiment (2c6046fd71c14232994d0e89234fb4a4). It will be minimally functional until connected.\n"
+      "Warning: Experiment.connect() has not been run on this experiment (9cd7a6f2af5347f3aa1da88a969f8de1). It will be minimally functional until connected.\n"
      ]
     },
     {
@@ -183,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<ndi.document.Document object at 0x12a0b2100>, <ndi.document.Document object at 0x12a0b22e0>]\n"
+      "[<ndi.document.Document object at 0x10e23a9d0>, <ndi.document.Document object at 0x127171160>]\n"
      ]
     }
    ],
@@ -200,7 +200,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_metadata': {'name': 'myDaq2', 'type': 'ndi_daq_system', 'experiment_id': '2c6046fd71c14232994d0e89234fb4a4', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'epoch_ids': [], 'epoch_probe_map_class': 'MockEpochProbeMap', 'daq_reader_class': 'MockReader'}\n"
+      "{'_metadata': {'name': 'myDaq1', 'type': 'ndi_daq_system', 'experiment_id': '9cd7a6f2af5347f3aa1da88a969f8de1', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': [], 'epoch_ids': [], 'epoch_probe_map_class': 'MockEpochProbeMap', 'daq_reader_class': 'MockReader'}\n"
      ]
     },
     {
@@ -227,10 +227,10 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x12a0a7c70>,\n",
-       " <ndi.document.Document at 0x12a0a7070>,\n",
-       " <ndi.document.Document at 0x12a0b2b50>,\n",
-       " <ndi.document.Document at 0x12a0b2880>]"
+       "[<ndi.document.Document at 0x1271710d0>,\n",
+       " <ndi.document.Document at 0x1271717f0>,\n",
+       " <ndi.document.Document at 0x127171610>,\n",
+       " <ndi.document.Document at 0x127171580>]"
       ]
      },
      "execution_count": 14,
