--- a/example/Demo_Database_SQL.ipynb
+++ b/example/Demo_Database_SQL.ipynb
@@ -79,11 +79,11 @@
     "ds = DaqSystem(name='myDaq1',\n",
     "              file_navigator=fn,\n",
     "              daq_reader=MockReader,\n",
-    "              epoch_probe_map_class=MockEpochProbeMap)\n",
+    "              epoch_probe_map=MockEpochProbeMap)\n",
     "ds2 = DaqSystem(name='myDaq2',\n",
     "               file_navigator=fn,\n",
     "               daq_reader=MockReader,\n",
-    "              epoch_probe_map_class=MockEpochProbeMap)"
+    "              epoch_probe_map=MockEpochProbeMap)"
    ]
   },
   {
@@ -128,7 +128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<ndi.document.Document object at 0x10beac370>\n"
+      "<ndi.document.Document object at 0x125107580>\n"
      ]
     }
    ],
@@ -147,7 +147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'id': '142b9454c51c41cb98bd2ef3a358dcd0', 'data': {'_metadata': {'name': 'myExperiment3', 'type': 'ndi_experiment', 'experiment_id': '142b9454c51c41cb98bd2ef3a358dcd0', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': []}, 'ctx': <ndi.database.sql.SQL object at 0x10bf09340>}\n"
+      "{'id': '5ad366429cdf4f66a8ded5a71203624a', 'data': {'_metadata': {'name': 'myExperiment3', 'type': 'ndi_experiment', 'experiment_id': '5ad366429cdf4f66a8ded5a71203624a', 'parent_id': '', 'asc_path': '', 'version_depth': 0, 'latest_version': True}, '_dependencies': {}, '_depends_on': []}, 'ctx': <ndi.database.sql.SQL object at 0x10bebc190>}\n"
      ]
     }
    ],
