Added comments to Demo_Binary_Collection

--- a/example/Demo_Binary_Collection.ipynb
+++ b/example/Demo_Binary_Collection.ipynb
@@ -54,6 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating/connecting to a binary collection on disk\n",
     "bc = BinaryCollection('./test_db', name='demo')"
    ]
   },
@@ -63,7 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "e = Experiment('test_experiment').connect(\n",
+    "# Creating experiment object and connecting it to database and binary collection\n",
+    "e = Experiment('test_experiment','../tests/data/intracell_example').connect(\n",
     "    database=db,\n",
     "    binary_collection=bc\n",
     ")"
@@ -75,7 +77,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating an NDI Document\n",
     "doc = Document({'hello': 'world'}, name='doc', type_='with_bin')\n",
+    "\n",
+    "# Adding NDI Document to experiment\n",
     "e.add_document(doc)"
    ]
   },
@@ -85,11 +90,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Opening a write stream object\n",
     "ws = doc.binary.open_write_stream()\n",
+    "\n",
+    "# Writing values into write stream object\n",
     "for i in range(5):\n",
     "    ws.write(struct.pack('d', i))\n",
     "for i in reversed(range(11)):\n",
     "    ws.write(struct.pack('d', i))\n",
+    "\n",
+    "# Closing write stream object\n",
     "ws.close()"
    ]
   },
@@ -110,11 +120,20 @@
     }
    ],
    "source": [
+    "# Opening a read stream object\n",
     "rs = doc.binary.open_read_stream()\n",
+    "\n",
+    "# Reading bytes data from read stream and converting into numpy array\n",
     "print(np.frombuffer(rs.read(40)))\n",
     "print(np.frombuffer(rs.read(32)))\n",
+    "\n",
+    "# Getting position of pointer in the stream object\n",
     "print(f'pointer at index {rs.tell()}')\n",
+    "\n",
+    "# Reading the rest of read stream data and converting input numpy array\n",
     "print(np.frombuffer(rs.read()))\n",
+    "\n",
+    "# Closing read stream object\n",
     "rs.close()"
    ]
   },
@@ -124,6 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Demo-ing write stream object using Pythonic \"with\"\n",
     "with doc.binary.open_write_stream() as ws:\n",
     "    for i in [3.425,4.34,5345,.453,542.,45]:\n",
     "        ws.write(struct.pack('d', i))"
@@ -143,6 +163,7 @@
     }
    ],
    "source": [
+    "# Demo-ing read stream object using Pythonic \"with\"\n",
     "with doc.binary.open_read_stream() as rs:\n",
     "    print(np.frombuffer(rs.read(-1)))"
    ]
